feat;indicaciones colocadas en index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lab FizzBuzz Ch62</title>
 </head>
 <body>
-    
+    <h1>Abre la consola (F12) para ver el FizzBuzz</h1>
         <script src="script.js"></script>
 
 </body>
